[MISC] pre-commit config updated and applied

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ author_email = develop@ppfeufer.de
 maintainer = Peter Pfeufer
 maintainer_email = develop@ppfeufer.de
 license = GPL-3.0
-license_file = LICENSE
+license_files = LICENSE
 classifiers =
     Environment :: Web Environment
     Framework :: Django
