--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,7 +45,7 @@ repos:
           - --markdown-linebreak-ext=md
         exclude: |
           (?x)(
-            .min(.css|.css.map|.js)|
+            .min(.css|.css.map|.js|.js.map)|
             locale/|
             static/(.*)/libs/
           )
@@ -53,7 +53,7 @@ repos:
       - id: end-of-file-fixer
         exclude: |
           (?x)(
-            .min(.css|.css.map|.js)|
+            .min(.css|.css.map|.js|.js.map)|
             locale/|
             static/(.*)/libs/
           )
@@ -64,7 +64,7 @@ repos:
       - id: eslint
         exclude: |
           (?x)(
-            .min.js|
+            .min(.js|.js.map)|
             static/(.*)/libs/
           )
 
@@ -100,7 +100,7 @@ repos:
         exclude: |
           (?x)(
             LICENSE|
-            .min(.css|.css.map|.js)|
+            .min(.css|.css.map|.js|.js.map)|
             static/(.*)/libs/
           )
 
@@ -158,6 +158,10 @@ repos:
     rev: 0.7.17
     hooks:
       - id: mdformat
+        exclude: |
+          (?x)(
+            .github/
+          )
         additional_dependencies:
           - mdformat-gfm==0.3.5  # Mdformat plugin for GitHub Flavored Markdown compatibility » https://github.com/hukkin/mdformat-gfm/tags
           - mdformat-toc==0.3.0  # Mdformat plugin to generate a table of contents » https://github.com/hukkin/mdformat-toc/tags
