--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,11 @@ classifiers = [
 dependencies = [
     "allianceauth>=3.6.1",
 ]
+[project.optional-dependencies]
+tests-allianceauth-stable = [
+    "coverage",
+    "django-webtest",
+]
 [project.urls]
 Changelog = "https://github.com/fire-coalition/fireauth-templates/blob/master/CHANGELOG.md"
 "Issue / Bug Reports" = "https://github.com/fire-coalition/fireauth-templates/issues"
